# cllm

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  __version__.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py  sys_prompt_compression-v2.json  sys_prompt_compression-v3.json  sys_prompt_corpus_results.json  transcript_analysis.json
.github/: release-drafter.yml
cllm/: __init__.py  activate_env.sh  clm_vs_nl.json  decoded_100_prompts.json  gpt_clm_vs_nl.json  main.py  pyproject.toml  structured_data_compressed.json  system_prompt.json  test_results.json  transcript_analysis.json  transcripts.json  validation_results_611_partials.json  validation_results_900_partials.json
cllm-admin-panel/: package-lock.json  package.json  tailwind.config.js
cllm-api/: main.py  pyproject.toml
cllm-webapp/: package-lock.json  package.json
cllm.egg-info/: PKG-INFO  SOURCES.txt
cllm/cllm.egg-info/: SOURCES.txt  requires.txt
cllm/components/: intent_detector.py  target_extractor.py
cllm/components/_target/: attributes.py  domain.py  extractors.py  target_normalizer.py  utils.py  validators.py
cllm/components/ds_compression/: _schemas.py  encoder.py
cllm/components/sys_prompt/: _schemas.py  encoder.py
cllm/components/sys_prompt/analyzers/: attribute_parser.py  context_parser.py  extraction_field.py  output_format.py
cllm/components/transcript/: _schemas.py  analyzer.py  encoder.py  vocabulary.py
cllm/components/transcript/utils/: named_entity.py  sentiment_analyzer.py  temporal_analyzer.py
cllm/config/: schemas.py
cllm/core/: encoder.py
cllm/core/compressors/statistical/: pattern_db.py  pattern_matcher.py
cllm/data/processed/: cllm_patterns.json  patterns.json  validation_partial_cases.json
cllm/data/raw/: awesome_prompts.csv  ctx_prompts.json  nbas_dataset.json  system_prompts.json
cllm/data/vocabulary/: cllm_token_vocab.json
cllm/dictionary/: __init__.py
cllm/dictionary/en/: rules.py
cllm/dictionary/es/: rules.py
cllm/dictionary/fr/: rules.py
cllm/dictionary/pt/: rules.py
cllm/docs/: CLLM_PITCH_DECK.md  CLLM_Zero_Training_Proof.md  CLM_NBA_Test_Plan.md  DECISION_DOCUMENT.md  NBA_Implementation_Guide.md  NBA_Visual_Comparison.md  README_SAAS_LAUNCH.md  TOKEN_COMPARISON_SUMMARY.txt  Universal_CLLM_Platform_Vision.md
cllm/model_core/: cllm_model.py
cllm/quality_gate/: entropy_gate.py  req_token_gate.py  statiscal_gate.py  target_token_gate.py
cllm/scripts/: Untitled.ipynb  analyze_compressor.py  benchmark_analysis.py  clm_benchmark.ipynb  clm_benchmark.py  create_dataset.py  domain_usecase.py  evaluate_real_workd_performance.py  evaluate_reconstruction_quality.py  filter_partials.py  full_evaluation.py  generate_cx_training_data.py  generate_training_data.py  pattern_optimizer.py  run_transcript_encoder.py  semantic_evaluation.py  statistical_compressor.py  statistical_pattern_miner.py
cllm/scripts/.ipynb_checkpoints/: clm_benchmark-checkpoint.ipynb
cllm/src/: main.py
cllm/src/analyzers/: attribute_parser.py  base.py  intent_detector.py  target_extractor.py
cllm/src/analyzers/attributes/: parser.py
cllm/src/analyzers/types/: base_type.py
cllm/src/api/: schemas.py
cllm/src/cllm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cllm/src/components/: analyzer_base.py  intent_detector.py  target_extractor.py
cllm/src/components/_target/: attributes.py  domain.py  extractors.py  target_normalizer.py  utils.py  validators.py
cllm/src/components/ds_compression/: __init__.py  _schemas.py  encoder.py
cllm/src/components/nba/: vocabulary.py
cllm/src/components/sys_prompt/: __init__.py  _schemas.py  config_manager.py  encoder.py  tokenizer.py  vocabulary.py
cllm/src/components/sys_prompt/analyzers/: attribute_parser.py  context_parser.py  extraction_field.py  intent_detector.py  output_format.py
cllm/src/components/transcript/: __init__.py  _schemas.py  analyzer.py  encoder.py  vocabulary.py
cllm/src/components/transcript/utils/: named_entity.py  sentiment_analyzer.py  temporal_analyzer.py
cllm/src/config/: schemas.py
cllm/src/core/: __init__.py  _schemas.py  decoder.py  encoder.py  text_classifier.py  tokenizer.py  vocabulary.py
cllm/src/core/compressors/statistical/: pattern_db.py  pattern_matcher.py  pattern_miner.py  pattern_trainer.py  schemas.py
cllm/src/dictionary/: __init__.py
cllm/src/dictionary/en/: patterns.py  rules.py  vocabulary.py
cllm/src/dictionary/es/: rules.py  vocabulary.py
cllm/src/dictionary/fr/: rules.py  vocabulary.py
cllm/src/dictionary/pt/: rules.py  vocabulary.py
cllm/src/model_core/: QUICKSTART.md  cllm_model.py
cllm/src/quality_gate/: base.py  entropy_gate.py  req_token_gate.py  schemas.py  semantic_gate.py  statiscal_gate.py  target_token_gate.py  token_syntax_gate.py
cllm/src/utils/: parser_rules.py  schemas.py  vocabulary.py
cllm/tests/: test_decoder.py  test_encoder.py  test_encoder_validation.py  test_system_prompt.py  test_targert.py
cllm/utils/: base_config.py
clm_core/: __init__.py  __version__.py  decoder.py  encoder.py  types.py
docs/: CLLM_SAAS_STRATEGY.md  CLLM_SAAS_TECHNICAL_PLAN.md  CLLM_Transcript_Compression_Breakdown.md  CLM_NBA_Test_Plan.md  DECISION_DOCUMENT.md  Executive_Presentation_Summary.md  INDEX.md  Kolmogorov_Complexity_in_CLLM.md  NBA_CLLM_Analysis_and_Optimization.md  NBA_Implementation_Guide.md  SAAS_QUICK_START.md  index.md  sd_encoder.md  sys_prompt_encoder.md  token_efficiency_chart.txt  transcript_encoder.md
scripts/: Untitled.ipynb  analyze_compressor.py  clm_benchmark.ipynb  clm_benchmark.py  clm_gpt_benchmark.py  clm_vs_nl_full_summary.csv  compress_structured_data.py  domain_usecase.py  evaluate_real_workd_performance.py  evaluate_reconstruction_quality.py  filter_partials.py  full_evaluation.py  generate_cx_training_data.py  generate_training_data.py  pattern_optimizer.py  run_transcript_encoder.py  semantic_evaluation.py  statistical_compressor.py  statistical_pattern_miner.py  system_prompt.py  test_system_prompt_corpus.py
tests/: test_clmencoder.py  test_decoder.py  test_encoder.py  (+6 more)
(+124 files in other folders)
