[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clm-core"
version = "0.0.4"
# dynamic = ["readme", "version"]
readme = "README.md"
description = "Natural Language compressor for LLMs (Compressed Language Model)."
license = "BSD-3-Clause"
requires-python = ">=3.9"

authors = [
    { name = "Yanick Andrade", email = "yanick.jair.ta@gmail.com" },
]
homepage = "https://github.com/YanickJair/cllm"
repository = "https://github.com/YanickJair/cllm"
documentation = "https://github.com/YanickJair/cllm"
keywords = [
  "Natural Language Compression",
  "LLM Compressor",
  "Compressed Language Model",
  "CLM",
  "NLP",
  "Text Compression",
    "Structure Data Compression",
    "System Prompt Compressor"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "spacy>=3.8.7",
    "pydantic>=2.12.5",
]

[tool.hatch.version]
path = "clm_core/__version__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/CHANGELOG.md",
    "/clm_core",
    "/tests",
]

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.metadata.hooks.fancy-pypi-readme]
# content-type = "text/markdown"

# [[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
# path = "README.md"

# REMOVED CHANGELOG FRAGMENTS - Add back when CHANGELOG.md is ready
# [[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
# text = "\n## Release Information\n\n"
#
# [[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
# path = "CHANGELOG.md"
# pattern = "\n(###.+?\n)## "
#
# [[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
# text = "\n---\n\n[Full changelog](https://github.com/YanickJair/cllm/blob/master/CHANGELOG.md)\n"

# [[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# pattern = 'src="(docs/img/.*?)"'
# replacement = 'src="https://raw.githubusercontent.com/YanickJair/cllm/master/\1"'

[tool.ruff.lint]
select = ["E", "F", "I", "B", "PIE"]
ignore = ["B904", "B028"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F405"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = ["venv/*", ".venv/*", "scripts/*"]
include = ["clm_core/*", "tests/*"]
